--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= number %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <p>The number is<%=number %></p>
+
+    <div style="margin-left:80%;width:max-content;">
+      <a href="/add" class="btn btn-primary">Add Expense</a>
+    </div>
+
+  <div class="row">
+    <% expenseList.forEach((expense,i) =>{%>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title"><%= expense.title %></h5>
+        <h6 class="card-subtitle mb-2 text-muted">Paid by: <%= expense.paidBy %></h6>
+        <p class="card-text"><%= expense.description %></p>
+        <p class="card-text"><%= expense.anount %></p>
+        <a href="/edit/<%= expense._id %>" class="btn btn-success">Update</a>
+        <a href="/delete/<%= i %>"  class="btn btn-danger">Delete</a>
+      </div>
+    </div>
+    <% }) %>
   </body>
 </html>
